Initial work for Mac OS X portability (bug 89019); patch from Steve Dagley <sdagley@netscape.com>, r=mcs@netscape.com, sr=sfraser@netscape.com; moved forward from the LDAPCSDK_40_BRANCH