mozilla/directory/c-sdk/ldap/libraries/macintosh/LDAPClientDebugDefs.h
@@ -32,6 +32,10 @@
 #define OTUNIXERRORS 1
 #endif
 
+/* Read standard Mac prefix header */
+#include "MacPrefix_debug.h"
+
+#if 0 /* These are picked up from the MacPrefix file */
 #ifndef macintosh
 #define macintosh
 #endif 
@@ -42,3 +46,4 @@
 #include "IDE_Options.h"
 // #define NO_USERINTERFACE
 // #define LDAP_DEBUG
+#endif /* 0 */
